--- a/style.css
+++ b/style.css
@@ -31,10 +31,55 @@ button{
 } */
 /* TEXT ALIGN */
 
-p{
+/* p{
  text-align:justify;
 }
 h1{
     text-align: center;
     text-decoration: underline;
+} */
+/* TEXT PRAPERTIES */
+/* #h1{
+    font-weight: 100;
+}
+#h2{
+    font-weight: 250;
+}
+#h3{
+    font-weight: 600;
+}
+#h4{
+    font-weight: 900;
+} */
+
+/* FONT FAMILY */
+/* #p1{
+    font-family: Arial, Helvetica, sans-serif;
+} */
+
+/* UNIT IN CSS */
+/* #one{
+    font-size: 100px;
+}
+#three{
+    font-size: 20px;
+    line-height: 50px;
+    
+ text-transform: capitalize;
+} */
+
+*{
+    font-family:'Times New Roman', Times, serif;
+}
+
+
+h1{
+    text-transform: capitalize;
+
+}
+#outer{
+    font-size: 20px;
+}
+#inner{
+    font-size: 10px;
 }
