--- a/style.css
+++ b/style.css
@@ -1,85 +1,39 @@
-/* h1{
-    color: yellow;
-   
-}
-p{
-    color: green;
-   
-}
-button{
-    color: rgb(114, 250, 171);
-    background-color: white;
-}
-body{
-    background-color:#BEB2CB;
-} */
-/* p:first-child{
-    color: red;
-} */
-
-/* PRACTICE */
-/* #box {
-    background-color: blue;
-    color: white;
-} */
-/* h1,h2,h3,h4{
-    color: red;
+/* .div1{
+    height: 100px;
+    width: 100px;
+    background-color: red;
+    border-radius: 50px;
 }
 
-button{
+.div2{
+    height: 100px;
+    width: 100px;
     background-color: green;
-} */
-/* TEXT ALIGN */
-
-/* p{
- text-align:justify;
+    border-radius: 50px;
 }
-h1{
-    text-align: center;
-    text-decoration: underline;
+.div3{
+    height: 100px;
+    width: 100px;
+    background-color: blue;
+    border-radius: 50px;
 } */
-/* TEXT PRAPERTIES */
-/* #h1{
-    font-weight: 100;
-}
-#h2{
-    font-weight: 250;
-}
-#h3{
-    font-weight: 600;
-}
-#h4{
-    font-weight: 900;
-} */
-
-/* FONT FAMILY */
-/* #p1{
-    font-family: Arial, Helvetica, sans-serif;
-} */
-
-/* UNIT IN CSS */
-/* #one{
-    font-size: 100px;
-}
-#three{
-    font-size: 20px;
-    line-height: 50px;
-    
- text-transform: capitalize;
-} */
-
 *{
-    font-family:'Times New Roman', Times, serif;
+    padding: 0;
+    margin: 0;
+    color: white;
 }
-
-
-h1{
-    text-transform: capitalize;
+#navbar{
+    height: 50px;
+    background-color: black;
 
 }
-#outer{
-    font-size: 20px;
+button{
+    background-color: #f08804;
 }
-#inner{
-    font-size: 10px;
+#logo{
+   color: #f08804;
+   font-size: 24px;
+}
+a {
+    margin-left: 100px;
 }
